--- a/string-ktx/build.gradle
+++ b/string-ktx/build.gradle
@@ -1,8 +1,10 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'com.jfrog.bintray'
+    id 'maven-publish'
+    id 'org.jetbrains.dokka'
 }
-
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.1"
@@ -33,12 +35,100 @@ android {
 }
 
 dependencies {
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    compileOnly "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
+
+if (project.hasProperty("kotlin")) { //Kotlin libraries
+    task sourcesJar(type: Jar) {
+        classifier = 'sources'
+        from android.sourceSets.main.java.srcDirs
+    }
+
+    task javadoc(type: Javadoc, dependsOn: dokka) {
+
+    }
+}else if (project.hasProperty("android")) { // Android libraries
+    task sourcesJar(type: Jar) {
+        classifier = 'sources'
+        from android.sourceSets.main.java.srcDirs
+    }
+
+    task javadoc(type: Javadoc) {
+        source = android.sourceSets.main.java.srcDirs
+        classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    }
+} else { // Java libraries
+    task sourcesJar(type: Jar, dependsOn: classes) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+
+dokka {
+    outputFormat = 'html'
+    outputDirectory = "$buildDir/javadoc"
+    configuration {
+        externalDocumentationLink {
+            noAndroidSdkLink = true
+            url = new URL("file:D:/lib/AndroidKtx/package-list")
+            packageListUrl = new URL("file:D:/lib/AndroidKtx/package-list")
+        }
+    }
+}
+
+tasks.withType(Javadoc) {
+    options.addStringOption('Xdoclint:none', '-quiet')
+    options.addStringOption('encoding', 'UTF-8')
+    options.addStringOption('charSet', 'UTF-8')
+}
+artifacts {
+    archives javadocJar
+    archives sourcesJar
+}
+sourceSets {
+    main.java.srcDirs += 'src/main/kotlin'
+}
+
+
+
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
+def username = properties.getProperty('username')
+def password = properties.getProperty('password')
+
+bintray {
+    user = username
+    key = password
+    pkg {
+        repo = 'AndroidKtx'
+        name = 'String-ktx'
+        version("0.0.1")
+        licenses = ['Apache-2.0']
+        vcsUrl = 'https://github.com/ShowMeThe/AndroidKtx.git'
+    }
+    configurations = ['archives']
+    publications = ['MyPublication']
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            MyPublication(MavenPublication) {
+                from components.release
+                groupId = 'com.show.androidKtx'
+                artifactId = 'string-ktx'
+                version = '0.0.1'
+            }
+        }
+    }
+}
+
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.show.androidKtx'
