--- a/span-ktx/build.gradle
+++ b/span-ktx/build.gradle
@@ -1,8 +1,10 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'com.jfrog.bintray'
-apply plugin: 'maven-publish'
-apply plugin: 'org.jetbrains.dokka'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'com.jfrog.bintray'
+    id 'maven-publish'
+    id 'org.jetbrains.dokka'
+}
 
 android {
     compileSdkVersion 30
