--- a/binding-ktx/build.gradle
+++ b/binding-ktx/build.gradle
@@ -10,6 +10,11 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.1"
 
+    buildFeatures {
+        viewBinding = true
+        dataBinding = true
+    }
+
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 30
@@ -35,10 +40,15 @@ android {
     }
 }
 
-
 dependencies {
-    compileOnly 'com.google.android.material:material:1.2.1'
-    compileOnly "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.2.1'
+    testImplementation 'junit:junit:4.+'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
 
 if (project.hasProperty("kotlin")) { //Kotlin libraries
@@ -111,8 +121,8 @@ bintray {
     key = password
     pkg {
         repo = 'AndroidKtx'
-        name = 'View-ktx'
-        version("0.0.2")
+        name = 'binding-ktx'
+        version("0.0.1")
         licenses = ['Apache-2.0']
         vcsUrl = 'https://github.com/ShowMeThe/AndroidKtx.git'
     }
@@ -125,13 +135,10 @@ afterEvaluate {
         publications {
             MyPublication(MavenPublication) {
                 from components.release
-                groupId = 'com.show.androidKtx'
-                artifactId = 'view-ktx'
-                version = '0.0.2'
+                groupId = 'com.show.binding'
+                artifactId = 'binding-ktx'
+                version = '1.0.0'
             }
         }
     }
 }
-
-apply plugin: 'com.github.dcendents.android-maven'
-group='com.show.androidKtx'
