--- a/binding-ktx/build.gradle
+++ b/binding-ktx/build.gradle
@@ -122,7 +122,7 @@ bintray {
     pkg {
         repo = 'AndroidKtx'
         name = 'binding-ktx'
-        version("0.0.1")
+        version("1.0.0")
         licenses = ['Apache-2.0']
         vcsUrl = 'https://github.com/ShowMeThe/AndroidKtx.git'
     }
@@ -135,10 +135,12 @@ afterEvaluate {
         publications {
             MyPublication(MavenPublication) {
                 from components.release
-                groupId = 'com.show.binding'
+                groupId = 'com.github.ShowMeThe'
                 artifactId = 'binding-ktx'
                 version = '1.0.0'
             }
         }
     }
 }
+
+group='com.github.ShowMeThe'
